--- a/app/src/css/App.scss
+++ b/app/src/css/App.scss
@@ -1,500 +1,11 @@
-:root {
-    --color-gray: #cac0be;
-    --color-light-gray: #F5F5F5;
-    --color-dark-gray: #7e7f80;
-    --color-shadow: rgba(34, 37, 41, 0.06);
-    --color-dark: #23262A;
-    --color-white: #FFFFFF;
-    --color-red: #FF7373;
-    --max-content-width: 1683px;
-    --max-content-width2: 1110px;
-    --max-content-width3: 1395px;
-}
-
-* {
-    font-family: Poppins;
-}
-
-.main-layout {
-    max-width: var(--max-content-width);
-    margin: 0 auto;
-}
-
-//#region Site wide
-
-nav {
-    
-    position: relative;
-    user-select: none;
-    z-index: 1;
-    columns: 3;
-    height: 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    text-align: end;
-    
-    .fa {
-        font-weight: normal;
-    }
-    
-    a:not(.logo), button {
-        margin-left: 20px;
-    }
-    
-    a {
-        font-weight: bold;
-    }
-
-    div {
-        width: 100%;
-    }
-    
-}
-
-.logo {
-    background-image: url("../img/logo.svg");
-    background-repeat: no-repeat;
-    background-position: left;
-    display: block;
-    min-width: 103px;
-    height: 49px;
-    align-self: center;
-}
-
-footer {
-
-    position: relative;
-    background-color: var(--color-light-gray);
-    height: 110px;
-    margin-top: 110px;
-    text-align: center;
-
-    div {
-        position: absolute;
-        margin: auto;
-        margin-top: 24px;
-        gap: 10px;
-        width: 100%;
-    }
-
-    p {
-        margin-bottom: 0;
-    }
-
-    a {
-        height: 22px;
-        margin: 9px;
-
-        &:hover {
-            scale: 110%;
-        }
-
-        &:active {
-            scale: 150%;
-        }
-
-    }
-
-    .fa-facebook:hover { color: blue; }
-    .fa-instagram:hover { color: purple; }
-    .fa-twitter:hover { color: deepskyblue; }
-    .fa-google:hover { color: red; }
-    .fa-linkedin:hover { color: blue; }
-
-}
-
-[badge] {
-    
-    position: relative;
-    
-    &::after {
-        content: attr(badge);
-        position: absolute;
-        top: -4px;
-        background-color: var(--color-red);
-        border-radius: 100%;
-        color: white;
-        z-index: 1;
-        width: 16px;
-        height: 16px;
-        font-size: 11px;
-        font-family: poppins;
-        text-align: center;
-        padding-top: 3px;
-        padding-left: 0.5px;
-
-    }
-
-}
-
-//#endregion
-//#region Buttons
-
-a {
-    
-    text-decoration: none;
-    color: var(--color-dark);
-    transition: all 0.1s ease;
-    cursor: pointer;
-
-    &:hover {
-        color: var(--color-red);
-    }
-    
-    &.active {
-        color: var(--color-red);
-            
-        &:hover {
-            filter: brightness(80%);
-        }
-
-    }
-
-    &.underline {
-        text-decoration: underline;
-    }
-
-}
-
-button {
-    
-    border: none;
-    font-weight: 500;
-    position: relative;
-    border: none;
-    padding: 24px 51px;
-    transition: all 0.1s ease;
-
-}
-
-.button-fancy {
-    
-    color: white;
-
-    &::before {
-        content: ' ';
-        left: 10px;
-        top: 10px;
-        width: 20px;
-        height: 20px;
-
-        border-left: 2px solid white;
-        border-bottom: 2px solid white;
-        position: absolute;
-        display: block;
-        transition: all 0.5s ease;
-        transform: rotate(90deg);
-    }
-
-    &::after {
-        content: ' ';
-        right: 10px;
-        bottom: 10px;
-        width: 20px;
-        height: 20px;
-        border-right: 2px solid white;
-        border-top: 2px solid white;
-        position: absolute;
-        display: block;
-        transition: all 0.5s ease;
-        transform: rotate(90deg);
-    }
-
-    &:hover {
-
-        box-shadow: 0px 0px 5px #23262A;
-
-        &::before {
-            left: calc(100% - 30px);   
-            transform: rotate(180deg);
-        }
-    
-        &::after {
-            right: calc(100% - 30px);          
-            transform: rotate(180deg);
-        }
-
-    }
-
-    &:active {
-        scale: 105%;
-        box-shadow: 0px 0px 5px #23262A;
-    }
-
-}
-
-.button-icon {
-    
-    background-color: white;
-    border-radius: 100%;
-    width: 36px;
-    height: 36px;
-    border: transparent;
-    padding: 0;
-    box-shadow: 0px 0px 12px 4px #e8e8e8;
-    transition: all 0.1s ease;
-
-    &:hover {
-        background-color: var(--color-shadow);
-        box-shadow: none;
-    }
-
-    &:active {
-        background-color: var(--color-shadow);
-        box-shadow: 0px 0px 12px 4px #e8e8e8;
-        scale: 115%;
-    }
-
-}
-
-.button-red {
-    background-color: var(--color-red);
-    color: white;
-}
-
-.button-black {
-    background-color: var(--color-dark);
-    color: white;
-}
-
-.button-white {
-    background-color: var(--color-white);
-    color: black;    
-    
-    &::before {
-        border-color: black;
-    }
-    
-    &::after {
-        border-color: black;
-    }
-
-}
-
-.button-product {
-    width: 255px;
-    text-align: center;
-    position: relative;
-    padding: 0;
-    cursor: pointer;
-    user-select: none;
-    transition: all 0.1s ease;
-    font-size: 16px;
-
-    img {
-        width: 100%;
-        margin: 0;
-        height: 210px;
-        background-color: var(--color-light-gray);
-        border: none;
-        outline: none;
-    }
-
-    p:first-of-type {
-        margin-top: 8px;
-        font-size: 13px;
-        font-weight: normal;
-        color: #616365;
-    }
-
-    p {
-        font-weight: bold;
-    }
-
-    .hover-box {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        height: 210px;
-        background-color: #707070AA;
-        opacity: 0;
-        transition: all 0.1s ease;
-    }
-
-    &:hover {
-        .hover-box {
-            opacity: 1;
-        }
-    }
-
-    &:active {
-        scale: 105%;
-    }
-
-    .button-fancy {
-        position: absolute;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        height: 50px;
-        width: 100%;
-        margin: 0;
-        padding: 0;
-    }
-
-    .icon-buttons {
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-
-    .button-icon {
-        margin-top: 10px;
-        margin-right: 10px;
-        font-weight: normal;
-    }
-
-}
-
-.button-product.small {
-    width: 351px;
-    text-align: left;
-
-    img {
-        width: 160px;
-        height: 132px;
-        padding: 0;
-    }
-
-    .hover-box {
-        left: 0;
-        top: 0;
-        bottom: 0;
-        width: 160px;
-        height: 100%;
-        background-color: #707070AA;
-        // opacity: 0;
-        transition: all 0.1s ease;
-    }
-
-}
-
-.button-specialty {
-    background-color: var(--light-gray);
-    width: 490px;
-    height: 232px;
-    background-color: var(--color-dark-gray);
-    user-select: none;
-    padding: 0;
-    margin: 0;
-    position: relative;
-    z-index: 0;
-    cursor: pointer;
-    text-align: left;
-
-    > div {
-        width: 50%;
-    }
-
-    &::before {
-        content: ' ';
-        position: absolute;
-        display: inline-block;
-        background-color: var(--color-white);
-        top: 0;
-        bottom: 0;        
-        left: 0;
-        width: 50%;
-        z-index: -1;
-        pointer-events: none;
-        transition: all 0.1s ease;
-    }
-
-    &:hover::before {
-        opacity: 50%;
-        width: 100%;
-    }
-
-    &:active {
-        scale: 105%;
-    }
-
-    * {
-        margin-left: 34px;
-        margin-right: 34px;
-        pointer-events: none;
-    }
-
-}
-
-//#endregion
-//#region Utility
-
-//#region Color / Background
-
-.color-white {
-    color: white;
-}
-
-.color-gray {
-    color: #616365;
-}
-
-.background-light-gray {
-    background-color: var(--color-light-gray);
-}
-
-.background-gray {
-    background-color: var(--color-gray);
-}
-
-.background-dark-gray {
-    background-color: var(--color-dark-gray);
-}
-
-.background-white {
-    background-color: var(--color-white);
-}
-
-.background-dark {
-    background-color: var(--color-dark);
-}
-
-.background-model3 {
-    background-image: url("../img/img-3.svg");
-    background-position: left;
-    background-repeat: no-repeat;
-}
-
-.background-model4 {
-    background-image: url("../img/img-4.svg");
-    background-repeat: no-repeat;
-    background-position: right;
-}
-
-.background-model5 {
-    background-image: url("../img/img-5.svg");
-    background-position: right;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.background-model6 {
-    background-image: url("../img/img-6.svg");
-    background-position: right;
-    background-repeat: no-repeat;
-}
-
-.background-customer-support {
-    background-image: url("../img/customer-support.svg");
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-.background-credit-card {
-    background-image: url("../img/credit-card.svg");
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-.background-delivery-truck {
-    background-image: url("../img/delivery-truck.svg");
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-//#endregion
-
-//#endregion
+@import "_Base.scss";
+@import "_Utility.scss";
+
+@import "components/buttons/_Button-Fancy.scss";
+@import "components/buttons/_Button-Icon.scss";
+@import "components/buttons/_Button-Product.scss";
+@import "components/buttons/_Button-Specialty.scss";
+
+@import "components/Badge.scss";
+@import "components/_NavBar.scss";
+@import "components/_Footer.scss";
