--- a/app/src/css/views/main-page.scss
+++ b/app/src/css/views/main-page.scss
@@ -1,6 +1,4 @@
-
 .showcase {
-
     height: 946px;
     position: absolute;
     left: 0;
@@ -11,7 +9,6 @@
 }
 
 .showcase-content {
-    
     height: 946px;
     width: 100%;
     position: relative;
@@ -34,7 +31,7 @@
         left: 0;
         bottom: 0;
         display: inline-block;
-        background-image: url("../img/img-1.svg");
+        background-image: url("../../img/img-1.svg");
         background-repeat: no-repeat;
         background-position: left;
         width: 100%;
@@ -49,7 +46,7 @@
         right: 0;
         bottom: 0;
         display: inline-block;
-        background-image: url("../img/img-2.svg");
+        background-image: url("../../img/img-2.svg");
         background-repeat: no-repeat;
         background-position: right;
         width: 100%;
