--- a/app/src/css/components/_Footer.scss
+++ b/app/src/css/components/_Footer.scss
@@ -1,9 +1,8 @@
-
 footer {
 
     position: relative;
     background-color: var(--color-light-gray);
-    height: 110px;
+    height: var(--footer-height);
     margin-top: 110px;
     text-align: center;
 
