--- a/app/src/css/App.css
+++ b/app/src/css/App.css
@@ -9,6 +9,8 @@
   --max-content-width: 1683px;
   --max-content-width2: 1110px;
   --max-content-width3: 1395px;
+  --nav-height: 100px;
+  --footer-height: 110px;
 }
 
 * {
@@ -17,7 +19,12 @@
 
 .main-layout {
   max-width: var(--max-content-width);
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.not-found {
+  height: calc(100vh - var(--nav-height) - var(--footer-height) * 2);
 }
 
 a {
@@ -46,6 +53,10 @@ button {
   border: none;
   padding: 24px 51px;
   transition: all 0.1s ease;
+}
+
+p {
+  margin: 0;
 }
 
 .color-white {
@@ -97,7 +108,7 @@ button {
 
 .background-model6 {
   background-image: url("../img/img-6.svg");
-  background-position: right;
+  background-size: cover;
   background-repeat: no-repeat;
 }
 
@@ -117,6 +128,128 @@ button {
   background-image: url("../img/delivery-truck.svg");
   background-position: center;
   background-repeat: no-repeat;
+}
+
+.height-100p {
+  height: 100%;
+}
+
+.height-670 {
+  height: 670px;
+}
+
+.height-560 {
+  height: 560px;
+}
+
+.height-400 {
+  height: 400px;
+}
+
+.width-490 {
+  width: 490px;
+}
+
+.width-50p {
+  width: 50%;
+}
+
+.width-635px {
+  width: 635px;
+}
+
+.height-232 {
+  height: 232px;
+}
+
+.width-100p {
+  width: 100%;
+}
+
+.width-60 {
+  width: 60px !important;
+}
+
+.height-60 {
+  height: 60px !important;
+}
+
+.width-255 {
+  width: 255px;
+}
+
+.max-width-342 {
+  max-width: 342px;
+}
+
+.padding-0 {
+  padding: 0px !important;
+}
+
+.padding-8 {
+  padding: -8px !important;
+}
+
+.padding-50 {
+  padding: 50px;
+}
+
+.padding-64 {
+  padding: 64px;
+}
+
+.margin-0 {
+  margin: 0px;
+}
+
+.margin-49 {
+  margin: 49px;
+}
+
+.margin-30 {
+  margin: 30px;
+}
+
+.margin-vertical-30 {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.margin-top-50p {
+  margin-top: 50%;
+}
+
+.margin-top-90 {
+  margin-top: 90px;
+}
+
+.margin-bottom-26 {
+  margin-bottom: 26px;
+}
+
+.margin-bottom-30 {
+  margin-bottom: 30px;
+}
+
+.margin-bottom-34 {
+  margin-bottom: 34px;
+}
+
+.margin-bottom-100 {
+  margin-bottom: 100px;
+}
+
+.margin-left-0 {
+  margin-left: 0px;
+}
+
+.margin-left-32 {
+  margin-left: 32px;
+}
+
+.align-bottom {
+  position: absolute;
+  bottom: 0;
 }
 
 .button-fancy {
@@ -378,7 +511,7 @@ nav {
   z-index: 1;
   -moz-columns: 3;
        columns: 3;
-  height: 100px;
+  height: var(--nav-height);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -413,7 +546,7 @@ nav div:last-child {
 footer {
   position: relative;
   background-color: var(--color-light-gray);
-  height: 110px;
+  height: var(--footer-height);
   margin-top: 110px;
   text-align: center;
 }
