--- a/app/src/css/_Base.scss
+++ b/app/src/css/_Base.scss
@@ -9,6 +9,8 @@
     --max-content-width: 1683px;
     --max-content-width2: 1110px;
     --max-content-width3: 1395px;
+    --nav-height: 100px;
+    --footer-height: 110px;
 }
 
 * {
@@ -17,7 +19,12 @@
 
 .main-layout {
     max-width: var(--max-content-width);
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.not-found {
+    height: calc(100vh - var(--nav-height) - (var(--footer-height) * 2));
 }
 
 a {
@@ -55,4 +62,8 @@ button {
     padding: 24px 51px;
     transition: all 0.1s ease;
 
+}
+
+p {
+    margin: 0;
 }
