--- a/app/src/css/_Utility.scss
+++ b/app/src/css/_Utility.scss
@@ -49,7 +49,7 @@
 
 .background-model6 {
     background-image: url("../img/img-6.svg");
-    background-position: right;
+    background-size: cover;
     background-repeat: no-repeat;
 }
 
@@ -69,6 +69,66 @@
     background-image: url("../img/delivery-truck.svg");
     background-position: center;
     background-repeat: no-repeat;
+}
+
+//#endregion
+//#region height / width
+
+.height-100p { height: 100%; }
+.height-670 { height: 670px; }
+
+.height-560 { height: 560px; }
+
+.height-400 { height: 400px; }
+
+.width-490 { width: 490px; }
+
+.width-50p { width: 50%; }
+
+.width-635px { width: 635px; }
+
+.height-232 { height: 232px; }
+
+.width-100p { width: 100%; }
+
+.width-60 { width: 60px !important; }
+.height-60 { height: 60px !important; }
+
+.width-255 { width: 255px; }
+
+.max-width-342 { max-width: 342px; }
+
+//#endregion
+//#region Padding / Margin
+
+.padding-0 { padding: 0px !important; }
+.padding-8 { padding: -8px !important; }
+.padding-50 { padding: 50px; }
+.padding-64 { padding: 64px; }
+
+.margin-0 { margin: 0px; }
+.margin-49 { margin: 49px; }
+.margin-30 { margin: 30px; }
+
+.margin-vertical-30 { margin-top: 30px; margin-bottom: 30px; }
+
+.margin-top-50p { margin-top: 50%; }
+.margin-top-90 { margin-top: 90px; }
+
+.margin-bottom-26 { margin-bottom: 26px; }
+.margin-bottom-30 { margin-bottom: 30px; }
+.margin-bottom-34 { margin-bottom: 34px; }
+.margin-bottom-100 { margin-bottom: 100px; }
+
+.margin-left-0 { margin-left: 0px; }
+.margin-left-32 { margin-left: 32px; }
+
+//#endregion
+//#region Alignment
+
+.align-bottom {
+    position: absolute;
+    bottom: 0;
 }
 
 //#endregion
