--- a/app/src/css/components/_NavBar.scss
+++ b/app/src/css/components/_NavBar.scss
@@ -4,7 +4,7 @@ nav {
     user-select: none;
     z-index: 1;
     columns: 3;
-    height: 100px;
+    height: var(--nav-height);
     display: flex;
     justify-content: space-between;
     align-items: center;
