--- a/app/src/css/sections/Section0.scss
+++ b/app/src/css/sections/Section0.scss
@@ -29,7 +29,7 @@
         content: ' ';
         position: absolute;
         left: 0;
-        bottom: 0;
+        bottom: 44px;
         display: inline-block;
         background-image: url("../../img/img-1.svg");
         background-repeat: no-repeat;
@@ -44,7 +44,7 @@
         content: ' ';
         position: absolute;
         right: 0;
-        bottom: 0;
+        bottom: 44px;
         display: inline-block;
         background-image: url("../../img/img-2.svg");
         background-repeat: no-repeat;
