--- a/app/src/css/App.css
+++ b/app/src/css/App.css
@@ -59,6 +59,12 @@ p {
   margin: 0;
 }
 
+section {
+  margin-top: 44px;
+  margin-bottom: 44px;
+  text-align: center;
+}
+
 .color-white {
   color: white;
 }
@@ -261,233 +267,8 @@ p {
   right: 0;
 }
 
-.button-fancy {
-  color: white;
-}
-.button-fancy::before {
-  content: " ";
-  left: 10px;
-  top: 10px;
-  width: 20px;
-  height: 20px;
-  border-left: 2px solid white;
-  border-bottom: 2px solid white;
-  position: absolute;
-  display: block;
-  transition: all 0.5s ease;
-  transform: rotate(90deg);
-}
-.button-fancy::after {
-  content: " ";
-  right: 10px;
-  bottom: 10px;
-  width: 20px;
-  height: 20px;
-  border-right: 2px solid white;
-  border-top: 2px solid white;
-  position: absolute;
-  display: block;
-  transition: all 0.5s ease;
-  transform: rotate(90deg);
-}
-.button-fancy:hover {
-  box-shadow: 0px 0px 5px #23262A;
-}
-.button-fancy:hover::before {
-  left: calc(100% - 30px);
-  transform: rotate(180deg);
-}
-.button-fancy:hover::after {
-  right: calc(100% - 30px);
-  transform: rotate(180deg);
-}
-.button-fancy:active {
-  scale: 105%;
-  box-shadow: 0px 0px 5px #23262A;
-}
-.button-fancy.button-red {
-  background-color: var(--color-red);
-  color: white;
-}
-.button-fancy.button-black {
-  background-color: var(--color-dark);
-  color: white;
-}
-.button-fancy.button-white {
-  background-color: var(--color-white);
-  color: black;
-}
-.button-fancy.button-white::before {
-  border-color: black;
-}
-.button-fancy.button-white::after {
-  border-color: black;
-}
-
-.button-icon {
-  position: relative;
-  background-color: white;
-  border-radius: 100%;
-  width: 36px;
-  height: 36px;
-  border: transparent;
-  padding: 0;
-  box-shadow: 0px 0px 12px 4px #e8e8e8;
-  transition: all 0.1s ease;
-}
-.button-icon:hover {
-  background-color: var(--color-shadow);
-  box-shadow: none;
-}
-.button-icon:active {
-  background-color: var(--color-shadow);
-  box-shadow: 0px 0px 12px 4px #e8e8e8;
-  scale: 115%;
-}
-.button-icon::before {
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  text-align: center;
-  margin: auto;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
-}
-
-.button-product {
-  width: 255px;
-  text-align: center;
-  position: relative;
-  padding: 0;
-  cursor: pointer;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  transition: all 0.1s ease;
-  font-size: 16px;
-}
-.button-product img {
-  width: 100%;
-  margin: 0;
-  height: 210px;
-  background-color: var(--color-light-gray);
-  border: none;
-  outline: none;
-}
-.button-product p:first-of-type {
-  margin-top: 8px;
-  font-size: 13px;
-  font-weight: normal;
-  color: #616365;
-}
-.button-product p {
-  font-weight: bold;
-}
-.button-product .hover-box {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 210px;
-  background-color: rgba(112, 112, 112, 0.6666666667);
-  opacity: 0;
-  transition: all 0.1s ease;
-}
-.button-product:hover .hover-box {
-  opacity: 1;
-}
-.button-product:active {
-  scale: 105%;
-}
-.button-product .button-fancy {
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  height: 50px;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-}
-.button-product .icon-buttons {
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-.button-product .button-icon {
-  margin-top: 10px;
-  margin-right: 10px;
-  font-weight: normal;
-}
-.button-product.small {
-  width: 351px;
-  text-align: left;
-}
-.button-product.small img {
-  width: 160px;
-  height: 132px;
-  padding: 0;
-}
-.button-product.small .hover-box {
-  left: 0;
-  top: 0;
-  bottom: 0;
-  width: 160px;
-  height: 100%;
-  background-color: rgba(112, 112, 112, 0.6666666667);
-  transition: all 0.1s ease;
-}
-
-.button-specialty {
-  background-color: var(--light-gray);
-  width: 490px;
-  height: 232px;
-  background-color: var(--color-dark-gray);
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  padding: 0;
-  margin: 0;
-  position: relative;
-  z-index: 0;
-  cursor: pointer;
-  text-align: left;
-}
-.button-specialty > div {
-  width: 50%;
-}
-.button-specialty::before {
-  content: " ";
-  position: absolute;
-  display: inline-block;
-  background-color: var(--color-white);
-  top: 0;
-  bottom: 0;
-  left: 0;
-  width: 50%;
-  z-index: -1;
-  pointer-events: none;
-  transition: all 0.1s ease;
-}
-.button-specialty:hover::before {
-  opacity: 50%;
-  width: 100%;
-}
-.button-specialty:active {
-  scale: 105%;
-}
-.button-specialty * {
-  margin-left: 34px;
-  margin-right: 34px;
-  pointer-events: none;
+.gap-10 {
+  gap: 10px;
 }
 
 [badge] {
@@ -496,11 +277,10 @@ p {
 [badge]::after {
   content: attr(badge);
   position: absolute;
-  top: -4px;
+  top: -26px;
   right: -4px;
   width: 16px;
   height: 16px;
-  padding-top: 3px;
   padding-left: 0.5px;
   background-color: var(--color-red);
   border-radius: 100%;
@@ -525,6 +305,8 @@ nav {
   justify-content: space-between;
   align-items: center;
   text-align: center;
+  padding-left: 22px;
+  padding-right: 22px;
 }
 nav .fa {
   font-weight: normal;
@@ -541,13 +323,29 @@ nav div {
 nav div:last-child {
   text-align: end;
 }
+@media only screen and (max-width: 1683px) {
+  nav {
+    padding: 0 !important;
+    margin: 22px !important;
+    max-width: 100vw !important;
+    text-align: end;
+  }
+}
+
+.mobile-button {
+  display: none;
+}
+@media only screen and (max-width: 100px) {
+  .mobile-button {
+    display: block;
+  }
+}
 
 .logo {
   background-image: url("../img/logo.svg");
   background-repeat: no-repeat;
   background-position: left;
   display: block;
-  min-width: 103px;
   height: 49px;
   align-self: center;
 }
