--- a/app/src/css/_Base.scss
+++ b/app/src/css/_Base.scss
@@ -1,17 +1,4 @@
-:root {
-    --color-gray: #cac0be;
-    --color-light-gray: #F5F5F5;
-    --color-dark-gray: #7e7f80;
-    --color-shadow: rgba(34, 37, 41, 0.06);
-    --color-dark: #23262A;
-    --color-white: #FFFFFF;
-    --color-red: #FF7373;
-    --max-content-width: 1683px;
-    --max-content-width2: 1110px;
-    --max-content-width3: 1395px;
-    --nav-height: 100px;
-    --footer-height: 110px;
-}
+@import "_variables";
 
 * {
     font-family: Poppins;
@@ -50,7 +37,7 @@ a {
     &.underline {
         text-decoration: underline;
     }
-
+    
 }
 
 button {
@@ -66,4 +53,12 @@ button {
 
 p {
     margin: 0;
+}
+
+section {
+
+    margin-top: 44px;
+    margin-bottom: 44px;
+    text-align: center;
+
 }
