--- a/app/src/css/components/ActionButton.scss
+++ b/app/src/css/components/ActionButton.scss
@@ -1,6 +1,9 @@
-.button-fancy {
+@import "../variables";
+
+button.action {
     
     color: white;
+    text-transform: uppercase;
 
     &::before {
         content: ' ';
@@ -52,17 +55,17 @@
         box-shadow: 0px 0px 5px #23262A;
     }
 
-    &.button-red {
+    &.red {
         background-color: var(--color-red);
         color: white;
     }
     
-    &.button-black {
+    &.black {
         background-color: var(--color-dark);
         color: white;
     }
     
-    &.button-white {
+    &.white {
         background-color: var(--color-white);
         color: black;    
         
