--- a/app/src/css/components/IconButton.scss
+++ b/app/src/css/components/IconButton.scss
@@ -5,6 +5,8 @@
     border-radius: 100%;
     width: 36px;
     height: 36px;
+    min-width: 36px;
+    max-width: 36px;
     border: transparent;
     padding: 0;
     box-shadow: 0px 0px 12px 4px #e8e8e8;
