--- a/app/src/css/components/ProductButton.scss
+++ b/app/src/css/components/ProductButton.scss
@@ -17,14 +17,14 @@
         outline: none;
     }
 
-    p:first-of-type {
+    p>:first-of-type {
         margin-top: 8px;
         font-size: 13px;
         font-weight: normal;
         color: #616365;
     }
 
-    p {
+    >p {
         font-weight: bold;
     }
 
@@ -49,7 +49,7 @@
         scale: 105%;
     }
 
-    .button-fancy {
+    button {
         position: absolute;
         left: 0;
         right: 0;
