--- a/app/src/css/_Utility.scss
+++ b/app/src/css/_Utility.scss
@@ -96,6 +96,10 @@
 //#endregion
 //#region Padding / Margin
 
+.mb-80 {
+    margin-bottom: 80px;
+}
+
 .padding-0 { padding: 0px !important; }
 .padding-8 { padding: -8px !important; }
 .padding-50 { padding: 50px; }
