--- a/app/src/css/components/IconButton.css
+++ b/app/src/css/components/IconButton.css
@@ -2,10 +2,10 @@
   position: relative;
   background-color: white;
   border-radius: 100%;
-  width: 36px;
-  height: 36px;
-  min-width: 36px;
-  max-width: 36px;
+  width: 36px !important;
+  height: 36px !important;
+  min-width: 36px !important;
+  max-width: 36px !important;
   border: transparent;
   padding: 0;
   box-shadow: 0px 0px 12px 4px #e8e8e8;
