--- a/app/src/css/components/ProductButton.scss
+++ b/app/src/css/components/ProductButton.scss
@@ -15,6 +15,8 @@
         background-color: var(--color-light-gray);
         border: none;
         outline: none;
+        object-position: center;
+        object-fit: cover;
     }
 
     p>:first-of-type {
@@ -49,7 +51,7 @@
         scale: 105%;
     }
 
-    button {
+    >div>a>button {
         position: absolute;
         left: 0;
         right: 0;
