--- a/app/src/css/components/_NavBar.scss
+++ b/app/src/css/components/_NavBar.scss
@@ -31,30 +31,45 @@ nav {
 
     }
     
-    @media only screen and (max-width: 1683px)  {
+    @media only screen and (max-width: 1000px)  {
         padding: 0 !important;
         margin: 22px !important;
+        margin-top: 0;
         max-width: 100vw !important;
-        text-align: end;
+        align-items: start;
+
     }
     
 }
 
-.mobile-button {
-    display: none;
+.mobile-menu {
+    position: absolute;
+    top: 64px;
+    right: 22px;
+    text-align: center;
+    font-weight: bolder;
+    background-color: var(--color-light-gray);
+    border-color: var(--color-dark);
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 4px;
+    padding: 12px;
+    width: 200px;
+    z-index: 1;
 
-    @media only screen and (max-width: 100px)  {
-        display: block;
+    >div {
+        display: flex;
+        flex-direction: column;
     }
-    
+
 }
 
 .logo {
     background-image: url("../img/logo.svg");
     background-repeat: no-repeat;
     background-position: left;
+    margin-top: -12px;
     display: block;
     height: 49px;
     align-self: center;
-
 }
