--- a/app/src/_scss/components/_NavBar.scss
+++ b/app/src/_scss/components/_NavBar.scss
@@ -1,6 +1,7 @@
 nav {
     
-    position: relative;
+    position: sticky;
+    top: 0;
     user-select: none;
     z-index: 1;
     columns: 3;
@@ -11,7 +12,15 @@ nav {
     text-align: center;
     padding-left: 22px;
     padding-right: 22px;
+    background-color: var(--color-white);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    transition: all 0.2s ease-out;
     
+    &.top {
+        background-color: transparent;
+        box-shadow: none;
+    }
+
     .fa {
         font-weight: normal;
     }
