--- a/app/src/_scss/App.scss
+++ b/app/src/_scss/App.scss
@@ -12,6 +12,8 @@
 @use "components/_IconButton";
 @use "components/_ProductButton";
 @use "components/_SpecialtyButton";
+@use "components/_SaleButton";
+@use "components/_InfoBox";
 
 // @use "sections/_ProductSection";
 @use "sections/_BreadcrumbSection";
