--- a/app/src/_scss/_Base.scss
+++ b/app/src/_scss/_Base.scss
@@ -11,6 +11,12 @@
     margin-right: auto;
 }
 
+.main-layout2 {
+    max-width: var(--max-content-width2);
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .not-found {
     height: calc(100vh - var(--nav-height) - (var(--footer-height) * 2));
 }
