--- a/app/src/_scss/_Utility.scss
+++ b/app/src/_scss/_Utility.scss
@@ -29,26 +29,26 @@
 }
 
 .background-model3 {
-    background-image: url("../img/img-3.svg");
+    background-image: url("../img/3.png");
     background-size: cover;
     background-repeat: no-repeat;
 }
 
 .background-model4 {
-    background-image: url("../img/img-4.svg");
+    background-image: url("../img/4.png");
     background-size: cover;
     background-position: right;
 }
 
 .background-model5 {
-    background-image: url("../img/img-5.svg");
+    background-image: url("../img/5.png");
     background-position: right;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .background-model6 {
-    background-image: url("../img/img-6.svg");
+    background-image: url("../img/6.png");
     background-size: cover;
     background-repeat: no-repeat;
 }
