--- a/app/src/_scss/sections/_Section0.scss
+++ b/app/src/_scss/sections/_Section0.scss
@@ -31,7 +31,7 @@
         left: 0;
         bottom: 44px;
         display: inline-block;
-        background-image: url("../img/img-1.svg");
+        background-image: url("../img/1.png");
         background-repeat: no-repeat;
         background-position: left;
         width: 100%;
@@ -46,7 +46,7 @@
         right: 0;
         bottom: 44px;
         display: inline-block;
-        background-image: url("../img/img-2.svg");
+        background-image: url("../img/2.png");
         background-repeat: no-repeat;
         background-position: right;
         width: 100%;
