--- a/app/src/_scss/App.css
+++ b/app/src/_scss/App.css
@@ -35,6 +35,10 @@
       overscroll-behavior: none;
 }
 
+.row {
+  margin-top: 0;
+}
+
 .main-layout {
   max-width: var(--max-content-width);
   margin-left: auto;
@@ -118,26 +122,26 @@ section {
 }
 
 .background-model3 {
-  background-image: url("../img/img-3.svg");
+  background-image: url("../img/3.png");
   background-size: cover;
   background-repeat: no-repeat;
 }
 
 .background-model4 {
-  background-image: url("../img/img-4.svg");
+  background-image: url("../img/4.png");
   background-size: cover;
   background-position: right;
 }
 
 .background-model5 {
-  background-image: url("../img/img-5.svg");
+  background-image: url("../img/5.png");
   background-position: right;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .background-model6 {
-  background-image: url("../img/img-6.svg");
+  background-image: url("../img/6.png");
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -612,6 +616,9 @@ button.action.white::after {
   opacity: 0;
   transition: all 0.1s ease;
 }
+.button-product:hover {
+  box-shadow: 0px 0px 5px #23262A;
+}
 .button-product:hover .hover-box {
   opacity: 1;
 }
@@ -687,6 +694,9 @@ button.action.white::after {
   z-index: -1;
   pointer-events: none;
   transition: all 0.1s ease;
+}
+.button-specialty:hover {
+  box-shadow: 0px 0px 5px #23262A;
 }
 .button-specialty:hover::before {
   opacity: 50%;
@@ -858,7 +868,7 @@ button.action.white::after {
   left: 0;
   bottom: 44px;
   display: inline-block;
-  background-image: url("../img/img-1.svg");
+  background-image: url("../img/1.png");
   background-repeat: no-repeat;
   background-position: left;
   width: 100%;
@@ -872,7 +882,7 @@ button.action.white::after {
   right: 0;
   bottom: 44px;
   display: inline-block;
-  background-image: url("../img/img-2.svg");
+  background-image: url("../img/2.png");
   background-repeat: no-repeat;
   background-position: right;
   width: 100%;
