--- a/app/src/_scss/components/_SpecialtyButton.scss
+++ b/app/src/_scss/components/_SpecialtyButton.scss
@@ -28,9 +28,15 @@
         transition: all 0.1s ease;
     }
 
-    &:hover::before {
-        opacity: 50%;
-        width: 100%;
+    &:hover {
+
+        box-shadow: 0px 0px 5px #23262A;
+
+        &::before {
+            opacity: 50%;
+            width: 100%;
+        }
+
     }
 
     &:active {
